Fix post title spacing

--- a/static/css/custom.scss
+++ b/static/css/custom.scss
@@ -63,3 +63,8 @@ h3:before {
 #post-list-item {
     list-style-type: none;
 }
+
+
+hr {
+    border-color: $color-primary;
+}
